[metadata]
name = sunbird
version = 0.0.0
description = python code to analyse cosmological N-body simulations 
[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pathlib

[options.extras_require]
inferences =
    iminuit
    emcee
    pocomc
    dynesty 
    pybobyqa
    dill
    jax
    numpyro
