[metadata]
name = sunbird
version = 0.0.0
description = python code to analyse cosmological N-body simulations 
[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pathlib
    xarray
    torch
    pytorch
    lightning
    pytorch_lightning
    jax
    flax
    optuna
    joblib

[options.extras_require]
cosmology = 
    cosmoprimo
inferences =
    iminuit
    emcee
    pocomc
    dynesty 
    Py-BOBYQA
    dill
    numpyro
    getdist
    h5py